# XaerosMapFormat

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: ByteInputUtils.cmake  ColorLookup.cmake  Dependencies.cmake  StateIDLookup.cmake
examples/: CMakeLists.txt  XaeroCoordman.cpp  XaeroRenderer.cpp  XaeroReprocess.cpp
generation/: generator.py
include/xaero/: Map.hpp  Parser.hpp  RegionTools.hpp
include/xaero/lookups/: BlockLookups.hpp  LookupTypes.hpp
include/xaero/types/: BlockState.hpp  Chunk.hpp  ColorInfo.hpp  LookupTypes.hpp  Overlay.hpp  Pixel.hpp  Region.hpp  TileChunk.hpp
include/xaero/util/: Constants.hpp  IndexableView.hpp  LookupTypes.hpp  PairHash.hpp  Region.hpp  RegionImage.hpp
src/: Map.cpp  Parser.cpp  RegionTools.cpp
src/lookups/: BlockLookups.cpp  LegacyCompatibility.cpp  LegacyCompatibility.hpp  LookupTypes.cpp
src/types/: BlockState.cpp  Chunk.cpp  LookupTypes.cpp  Overlay.cpp  Pixel.cpp  Region.cpp  RegionImage.cpp  TileChunk.cpp
src/util/: BitView.hpp  BitWriter.hpp  ByteInputStream.cpp  ByteInputStream.hpp  ByteOutputStream.cpp  ByteOutputStream.hpp  Endianness.cpp  Endianness.hpp  LookupTypes.cpp  Math.hpp  OptionalOwnerPtr.hpp  Region.cpp  RegionImage.cpp  StringUtils.cpp  StringUtils.hpp  VariantUtils.hpp
tests/: CMakeLists.txt  test.cpp
